--- a/.github/workflows/auto_deploy.yml
+++ b/.github/workflows/auto_deploy.yml
@@ -30,4 +30,4 @@ jobs:
     - name: Installing Surge
       run: npm install --global surge
     - name: deploying using surge
-      run: surge ./ bootcamp-firstproject.surge.sh --token ${{ secrets.SURGE_TOKEN }}
+      run: surge ./ bootcamp-firstassignment.surge.sh --token ${{ secrets.SURGE_TOKEN }}
