--- a/.github/workflows/auto_deploy.yml
+++ b/.github/workflows/auto_deploy.yml
@@ -22,12 +22,12 @@ jobs:
 
     # Runs a single command using the runners shell
     - name: Installing Node
-    - uses: actions/setup-node@v2-beta
+      uses: actions/setup-node@v2-beta
       with:
         node-version: 12
         
     # Runs a set of commands using the runners shell
     - name: Installing Surge
-      run: npm install -g surge
+      run: npm install --global surge
     - name: deploying using surge
       run: surge ./ bootcamp-firstproject.surge.sh --token ${{ secrets.SURGE_TOKEN }}
